--- a/css/divdesign.css
+++ b/css/divdesign.css
@@ -62,6 +62,21 @@
 }
 
 
+.divfour{
+	width:300px;
+	height:300px;
+	/*background-image: linear-gradient(rgba(17,239,127,0.3),rgba(211,33,127,0.3)) , url(../img/cover/bg2.jpg);*/
+	background-image: linear-gradient(
+		45deg,
+		red 40%,
+		blue 10%
+		);
+	color:white;
+	font-size: 30px;
+
+}
+
+
 /*function
 name() <= function name
 (value) <= parameter or argument (single,multiparamenter)*/
